test/regression/Output/2007-10-11-illegal-access-after-free-and-branch.c.tmp.klee-out/test000001.pc
array unnamed[3] : w32 -> w8 = symbolic
(query [(Eq false
             (Ult 4 (Read w8 0 unnamed)))
         (Eq false
             (Eq 0 (Read w8 1 unnamed)))]
        false)
